--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,12 @@ font-family: 'Noto Sans Thai', sans-serif;
 }
 
  body {
+     width: 100%;
+  height: 400px;
   background-image: url('../images/Home.jpg');
    Background-repeat: no-repeat;
    background-position: top;
+
 }
 
 h2{
@@ -97,3 +100,19 @@ font-size: 18px;
 
 }
 
+
+.highlight {
+    font-size: 14px;
+    font-size: 1.4rem;
+}
+
+
+.text {
+    font-size: 18px;
+    font-size: 1.8rem;
+}
+
+.a {
+  text-align: center;
+  font size: 16;
+}
