--- a/css/style.css
+++ b/css/style.css
@@ -62,23 +62,26 @@ font-family: 'Noto Sans Thai', sans-serif;
 font-family: 'Noto Sans Thai', sans-serif;
   
   color: white;
+  font-family size: 6px;
 
 }
 
  body {
      width: 100%;
   height: 400px;
+
   background-image: url('../images/Home.jpg');
    Background-repeat: no-repeat;
    background-position: top;
+   
 
 }
 
-h2{
+h3{
 
 font-family: 'Cherry Bomb One', cursive;
   font-family color: white; 
-  font-size: 60px;
+  font-size: 50px;
   
 }
 
@@ -101,10 +104,7 @@ font-size: 18px;
 }
 
 
-.highlight {
-    font-size: 14px;
-    font-size: 1.4rem;
-}
+
 
 
 .text {
@@ -112,7 +112,6 @@ font-size: 18px;
     font-size: 1.8rem;
 }
 
-.a {
-  text-align: center;
-  font size: 16;
+.plswork {
+  opacity: 0.0;
 }
