--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,6 @@ font-family: 'Noto Sans Thai', sans-serif;
   
 }
 
-.button{
-
-font-family: 'Noto Sans Thai', sans-serif;
-
-  
-}
-
-
 .footer {
   background-color: #5B5247;
 }
@@ -62,19 +54,13 @@ font-family: 'Noto Sans Thai', sans-serif;
 font-family: 'Noto Sans Thai', sans-serif;
   
   color: white;
-  font-family size: 6px;
 
 }
 
  body {
-     width: 100%;
-  height: 400px;
-
-  background-image: url('../images/Home.jpg');
+  background-image: url('../Images/Home.jpg');
    Background-repeat: no-repeat;
    background-position: top;
-   
-
 }
 
 h3{
@@ -83,35 +69,4 @@ font-family: 'Cherry Bomb One', cursive;
   font-family color: white; 
   font-size: 50px;
   
-}
-
-.brown{
-
-  font-family color: #5B5247;
-
-}
-
-p{
-
-font-size: 18px;
-
-}
-
-tr{
-
-font-size: 18px;
-
-}
-
-
-
-
-
-.text {
-    font-size: 18px;
-    font-size: 1.8rem;
-}
-
-.plswork {
-  opacity: 0.0;
 }
